# Scraper-app

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  COMPARISON_ANALYSIS_PROMPT.md  Claude Prompt for Scraper.txt  DEPLOY.md  Dockerfile  HYDRA_REVISION_SPEC_PROMPT.md  README.md  SESSION_RESUME_PROMPT.md  TRUE_SYSTEM_PICTURE_QA_REPORT.md  WORKFLOW_FIX_PROMPT.md  alembic.ini  all_templates_browser_results.json  api_research_results.xlsx  env.keys  fb_posts_raw.json  n8n_templates_RESCORED.xlsx  netlify.toml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py  run_e2e.bat  settings.json  start_server.py  we are about to start a new project.txt
.claude/: CLAUDE.md
.github/workflows/: build-desktop.yml  build-extension.yml  ci.yml  claude-e2e.yml  deploy.yml
alembic/: env.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/resources/: README.md
apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs  server.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_MATRIX.xlsx  DATA_SOURCES_TEST_RESULTS.xlsx  DEPLOYMENT.md  E2E_TEST_RESULTS.xlsx  FB_Group_AUTOMATED.xlsx  FB_Group_CLEAN.xlsx  FB_Group_Pc_Parts_UK.xlsx  FB_Group_Pc_Parts_UK_LIVE.xlsx  FINAL_LIVE_QA.md  LEGACY_MIGRATION.md  SaaS_PRODUCTION_EXECUTION_PROMPT.md  SaaS_PRODUCTION_READINESS_GAPS.xlsx  WEB_SCRAPERS_INDUSTRY_CATALOG.md  WORKFLOW_FIX_LOG.xlsx  YOUSELL_API_WORKFLOWS.md  api_reference.md  apify_catalog_implementation_mapping.xlsx  developer_setup.md  final_specs.md  qa_execution_log.md  qa_execution_prompt.md  qa_strategy.md  recursive_qa_prompt.md  security_audit.md  tasks_breakdown.md
scraper_pro/: INTEGRATION_PLAN.md  PROJECT_SUMMARY.md  README.md  __init__.py  ai_extractor.py  ai_scraper.py  ai_scraper_v3.py  ajax_handler.py  async_scraper.py  auth_scraper.py  check_response.py  cli.py  dashboard.py  debug_product_page.py  debug_timeout.py  engine.py  engine_v2.py  examples.py  examples_verticals.py  install.bat  install.sh  integrations.py  power_scraper.py  proxy_manager.py  requirements.txt  scheduler.py  scrape_myshop.py  scrapling_addons_report.md  smart_exporter.py  smart_scraper.py  templates.py  test_e2e.py  test_final.py  test_minimal.py  test_myshop.py  test_real.py  test_server.py  test_setup.py  verticals.py  web_dashboard.py
scripts/: build-desktop.sh  cli.py  create_e2e_excel.py  create_workflow_log.py  fb_live_scrape.py  generate_actor_catalog.py  loadtest.py  package-desktop.sh  package-extension.sh  run_actor_proof_factory.py  run_video_template_tests.py  test_all_templates_browser.py  validate-extension.sh
services/: __init__.py  control_plane  worker_ai  worker_browser  worker_hard_target  worker_http
system/: development_log.md  execution_trace.md  final_step_logs.md  lessons.md  todo.md
tests/: conftest.py
(+468 files in other folders)
