[project]
name = "scraper-platform"
version = "0.1.0"
description = "Production-grade, cloud-agnostic AI-powered web scraping platform"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "redis>=5.0",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "playwright>=1.40",
    "camoufox[geoip]>=0.4",
    "keepa>=1.4",
    "gspread>=6.0",
    "google-auth>=2.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
ai = [
    "google-genai>=1.0",
    "openai>=1.12",
]
export = [
    "openpyxl>=3.1",
]
extraction = [
    "extruct>=0.17",
    "price-parser>=0.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.6",
    "html2text>=2024.2",
    "rank-bm25>=0.2",
]
mcp = [
    "mcp>=1.0",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "testcontainers[postgres,redis]>=3.7",
]
all = [
    "scraper-platform[ai,export,extraction,observability,mcp,dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*", "services*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["packages", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require Docker services)",
    "e2e: End-to-end tests (full stack)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["packages", "services"]
omit = ["tests/*", "scraper_pro/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
